# bryson_stock

./: .gitignore  LICENSE  collect_台股晴雨表_台指期貨三大法人交易.ipynb  collect_台股晴雨表_台指期貨三大法人期貨淨未平倉量口數.ipynb  collect_台股晴雨表_台指選擇權put_call_ratio值抓取.ipynb  collect_台股晴雨表_外資期貨未平倉口數.ipynb  collect_台股晴雨表_散戶小台微台淨未平倉量.ipynb  collect_台股晴雨表_景氣對策燈號.ipynb  collect_台股晴雨表_自營商選擇權.ipynb  collect_鉅亨網題材來源.ipynb  pyproject.toml  twstock_dmi選股.ipynb  twstock_kd選股.ipynb  twstock_布林通道選股.ipynb  twstock_籌碼選股.ipynb
proj_util_pkg/: settings.py
proj_util_pkg/common/: tw_stock_topic.py
proj_util_pkg/external_data/: tw_stock_topics.xlsx
proj_util_pkg/finlab_api/: finlab_manager.py
proj_util_pkg/google_api/: gspread_manager.py
